# POSHadik

./: CMakeLists.txt  client  gui_client.c  gui_client.py  obstacles.txt  server
include/: client.h  game.h  ipc.h  messages.h  server.h
src/: client.c  game.c  ipc.c  server.c
